--- a/todo-list_Rudolfs_cabuts.html
+++ b/todo-list_Rudolfs_cabuts.html
@@ -43,6 +43,12 @@
     const span = document.createElement("span");
     span.textContent = text;
 
+    <!--Funkcija kas pievieno tesktam no ievades iespeju parvesrt vinu svitrainu un citada dizaina-->
+    span.onclick = function (){
+        span.classList.toggle("text-decoration-line-through");
+        span.classList.toggle("text-muted");
+    }
+
     const deleteBtn = document.createElement("button");
     deleteBtn.textContent = "Dzēst";
     deleteBtn.className = "btn btn-danger btn-sm";
