Aizmirsu ielikt autorus

--- a/todo-list_Rudolfs_cabuts.html
+++ b/todo-list_Rudolfs_cabuts.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+  <!--Pirmais autors ir: Rudolfs Čabuts un otrais autors ir: Andrejs Šorecs Darbs V2-->
 <html lang="lv">
 <head>
   <meta charset="UTF-8">
